CHANGES IN VERSION 3.1.1
------------------------
 o use byte compiler <2016-05-18, Wed>
 o https://github.com/Bioconductor-mirror/clusterProfiler/commit/2949fe8db5464c419c9d1665cb24f43c49ac54ec

CHANGES IN VERSION 3.0.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>

CHANGES IN VERSION 2.99.2
------------------------
 o add keyType parameter in enrichKEGG, enrichMKEGG, gseKEGG and gseMKEGG <2016-05-03, Tue>
 o search_kegg_species function <2016-05-03, Tue>
 o bitr_kegg function <2016-05-03, Tue>
   
CHANGES IN VERSION 2.99.1
------------------------
 o go2ont function <2016-04-28, Thu>
   + https://www.biostars.org/p/188863/
 o go2term function <2016-04-21, Thu>
 o export buildGOmap <2016-04-08, Fri>
 o fixed enrichDAVID according to https://support.bioconductor.org/p/72188/ <2016-04-08, Fri>
 
CHANGES IN VERSION 2.99.0
------------------------
 o version bump, ready to release version 3. <2016-03-29, Tue>
   + KEGG pathway and module support all species listed in KEGG website.
   + GO supports all species that have OrgDb which can be accessed online by AnnotationHub
   + User's defined/customized annotation is supported via enricher & GSEA
   
CHANGES IN VERSION 2.5.6
------------------------
 o write my own code to parse KEGG REST instead of using KEGGREST package <2016-03-10, Thu>
   + due to the issue of KEGGREST can't work with network of HTTP proxy with password
   + see: http://guangchuangyu.github.io/2015/02/kegg-enrichment-analysis-with-latest-online-data-using-clusterprofiler/#comment-2561443364

CHANGES IN VERSION 2.5.5
------------------------
 o maxGSSize paramter <2016-03-9, Wed>
 o update show method of compareClusterResult <2016-03-06, Sun> 
 o fixed R check <2016-03-06, Sun>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 2.5.4
------------------------
 o add use_internal_data=FALSE parameter in gseKEGG <2016-01-19, Tue>