@@ -52,82 +52,6 @@ build_Anno <- function(path2gene, path2name) {
 ## }
 
 
-
-
-excludeGOlevel <- function(x, ont, level) {
-    lv <- unlist(lapply(level, getGOLevel, ont=ont))
-    x <- excludeGOterm(x, lv)
-    return(x)
-}
-
-excludeGOterm <- function(x, term) {
-    if ( is(x, "enrichResult") ) {
-        x@result <- x@result[! x@result[, "ID"] %in% term, ]
-    } else if ( is(x, "compareClusterResult") ) {
-        x@compareClusterResult <- x@compareClusterResult[! x@compareClusterResult[, "ID"] %in% term, ]
-    } else {
-        stop("x should be one of enrichResult of compareClusterResult...")
-    }
-    return(x)
-}
-
-keepGOlevel <- function(x, ont, level) {
-    lv <- unlist(lapply(level, getGOLevel, ont=ont))
-    x <- keepGOterm(x, lv)
-    return(x)
-}
-
-keepGOterm <- function(x, term) {
-    if ( is(x, "enrichResult") ) {
-        x@result <- x@result[x@result[, "ID"] %in% term, ]
-    } else if ( is(x, "compareClusterResult") ) {
-        x@compareClusterResult <- x@compareClusterResult[x@compareClusterResult[, "ID"] %in% term, ]
-    } else {
-        stop("x should be one of enrichResult of compareClusterResult...")
-    }
-    return(x)
-}
-
-
-##' query GOIDs at a specific level.
-##'
-##'
-##' @title get GOIDs at a specific level
-##' @param ont Ontology
-##' @param level GO level
-##' @return a vector of GOIDs
-##' @importFrom GO.db GOBPCHILDREN
-##' @importFrom GO.db GOCCCHILDREN
-##' @importFrom GO.db GOMFCHILDREN
-##' @importMethodsFrom AnnotationDbi mget
-##' @author Guangchuang Yu \url{http://ygc.name}
-getGOLevel <- function(ont, level) {
-    switch(ont,
-           MF = {
-               topNode <- "GO:0003674"
-               Children <- GOMFCHILDREN
-           },
-           BP = {
-               topNode <- "GO:0008150"
-               Children <- GOBPCHILDREN
-           },
-           CC = {
-               topNode <- "GO:0005575"
-               Children <- GOCCCHILDREN
-           }
-           )
-
-    Node <- topNode
-    for (i in seq_len(level-1)) {
-        Node <- mget(Node, Children, ifnotfound=NA)
-        Node <- unique(unlist(Node))
-        Node <- as.vector(Node)
-        Node <- Node[!is.na(Node)]
-    }
-    return(Node)
-}
-
-
 ##' Internal plot function for plotting compareClusterResult
 ##'
 ##'
