@@ -1,5 +1,7 @@
 CHANGES IN VERSION 3.1.1
 ------------------------
+ o getGOLevel and dropGO support using a vector of GO level <2016-05-20, Fri>
+   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/clusterprofiler/zNYHLI6RpJI/1u4XRKfNAQAJ
  o use byte compiler <2016-05-18, Wed>
  o https://github.com/Bioconductor-mirror/clusterProfiler/commit/2949fe8db5464c419c9d1665cb24f43c49ac54ec
 
